# newut

./: README.md
caterpyllar/: README.md  setup.cfg
caterpyllar/caterpyllar/: buffer.py
copyer/: README.md  setup.cfg
copyer/copyer/geo/: geopop.py
copyer/copyer/seq/: window_pairs.py
epysode/: README.md  setup.cfg
epysode/epysode/: accessor.py  name.py  to.py
hospytal/: README.md  setup.cfg
mappyng/: README.md  setup.cfg
mappyng/mappyng/: diagnosis.py  manip.py  my_partial_mongoquery.py  special.py
nippy/: README.md  setup.cfg
nippy/nippy/: bugger.py  copy_of_data_flow.py  data_flow.py  decorators.py  ipython.py  log.py  my_proj_populate.py  pobj.py  pstore.py  resources.py  time.py  ulist.py
nippy/nippy/imports/: code.py  data_analysis.py  ipython_main_imports.py  ipython_utils.py  jan14.py  modelling.py  plotting_utils.py  scraping_imports.py  text_processing.py
nippy/nippy/tests/: uiter.py
nitpyck/: README.md  setup.cfg
nitpyck/nitpyck/: bsoup.py  google.py  gresult_info_retriever.py  parse_search_terms.py  rx.py  util.py  venere.py
nitpyck/nitpyck/web/: parsing_templates.py
okapy/: README.md  setup.cfg
okapy/okapy/: datamuse.py  scrap.py  sutils.py  term_stats.py  term_stats_maker.py  termstats.py  text_processors.py
okapy/okapy/tests/: termstats.py
olympyad/: README.md  setup.cfg
olympyc/: README.md  setup.cfg
olympyc/olympyc/: s3io.py  s3io_old.py
papyllon/: README.md  setup.cfg
pycea/: README.md  setup.cfg
pycea/pycea/: hist.py  timeseries.py
pyer/: README.md  setup.cfg
pyer/pyer/: parallel_timeseries_dacc.py
pyer/pyer/es/: com.py  get.py
pyer/pyer/ftp/: get.py
pyer/pyer/mong/: com.py  util.py
pyer/pyer/spark/: rdd_wrapper.py
pyety/: README.md  setup.cfg
pyety/pyety/: ddb_parser.py
pygeonhole/: README.md  setup.cfg
pygeonhole/pygeonhole/: amazon_sender.py  data_accessor.py  local.py  ms_logger.py  s3.py
pyggyback/: README.md  setup.cfg
pyggyback/pyggyback/mo2s3/: core.py
pyllar/: README.md  setup.cfg
pyllar/pyllar/: flask_wrap.py
pyllar/pyllar/dashboard/: analyzer.py  test_analyzer.py
pymento/: README.md  setup.cfg
pymento/pymento/: google_bak01.py
pynch/: README.md  setup.cfg
pynch/pynch/: order_conserving.py  util.py
pynhole/: README.md  setup.cfg
pynhole/pynhole/: naive_bayes_graph.py  pairs_pot.py  pot.py
pynhole/pynhole/old/: naive_binary_network.py
pynky/: README.md  setup.cfg
pynner/: README.md  setup.cfg
rapyd/: README.md  setup.cfg
scorpyon/: README.md  setup.cfg
scorpyon/scorpyon/: aw_editor.py  bull_shit_hack_because_imports_dont_work_WTF.py  dup_diag.py  keyword_operations_base.py  khan01_spike.py  manip.py  reporting.py  russian_dolls.py  russian_dolls_CAPS.py
scrapyng/: README.md  setup.cfg
scrapyng/scrapyng/: fb.py  util.py  yboss.py
scrapyng/scrapyng/misc/: amazon.py
sepya/: README.md  setup.cfg
sepya/sepya/: text.py
snippyng/: README.md  setup.cfg
snippyng/snippyng/: eigen_sound.py  text_to_sound.py  util.py
snippyng/snippyng/dacc/: mg.py
toothpyck/: README.md  setup.cfg
typyst/: README.md  setup.cfg
typyst/typyst/: naming.py  to.py
umpyre/: README.md  setup.cfg
vampyre/: README.md  setup.cfg
vampyre/vampyre/: browser.py  google.py  util.py  yboss.py
