[metadata]
name = copyer
version = 0.0.1
url = https://github.com/thorwhalen/ut/tree/master/copyer
platforms = any
description_file = README.md
description = Information accessors (a layer on top of data accessors).
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = copyer

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

