[metadata]
name = hospytal
version = 0.0.4
url = https://github.com/thorwhalen/ut/tree/master/hospytal
platforms = any
description_file = README.md
description = A medley of stuff that could be useful if and when repaired
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = hospytal

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

