[metadata]
name = nitpyck
version = 0.0.2
url = https://github.com/thorwhalen/ut/tree/master/nitpyck
platforms = any
description_file = README.md
description = Utils for parsing.
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = nitpyck

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

