[metadata]
name = okapy
version = 0.0.1
url = https://github.com/thorwhalen/ut/tree/master/okapy
platforms = any
description_file = README.md
description = NLP toolset
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = okapy

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

