[metadata]
name = olympyad
version = 0.0.2
url = https://github.com/thorwhalen/ut/tree/master/olympyad
platforms = any
description_file = README.md
description = 
		A collection of some gist post
		made reusable as a package
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = olympyad

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

