[metadata]
name = papyllon
version = 0.0.2
url = https://github.com/thorwhalen/ut/tree/master/papyllon
platforms = any
description_file = README.md
description = Yet another package to work with graphs and networks
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = papyllon

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

