[metadata]
name = pymento
version = 0.0.2
url = https://github.com/thorwhalen/ut/tree/master/pymento
platforms = any
description_file = README.md
description = Backup of stuff I'd like to keep around.
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = pymento

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

