[metadata]
name = pynhole
version = 0.0.2
url = https://github.com/thorwhalen/ut/tree/master/pynhole
platforms = any
description_file = README.md
description = Probabilistic Inference tools.
root_url = https://github.com/thorwhalen/ut/tree/master/
author = Thor Whalen
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = pynhole

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

